Fix hardcoded sized, align with flex

--- a/src/components/content/content.less
+++ b/src/components/content/content.less
@@ -2,20 +2,22 @@
 
 @animAmount: 100%;
 @animLength: 400ms;
+@contentDim: 100 - @thm-height;
 
 .content {
   position: absolute;
   display: flex;
+  justify-content: center;
+  align-items: center;
   overflow: hidden;
   width: 100%;
-  height: 75vh;
+  height: @contentDim;
   top: 0;
   left: 0;
 
   .slide {
-    margin: auto;
-    box-shadow: 0 0 10px #000;
-    height: 70vh;
+    box-shadow: 0 0 2vw #000;
+    height: @contentDim - 10;
     z-index: 500;
   }
 }
